--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
 .App {
+  margin: 0;
+  padding: 0;
+  height: 100%;
   text-align: center;
+  background-color: rgb(0, 3, 46);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+body {
+  background-color: rgb(33, 46, 46);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: xx-large;
+  color: white;
+  text-align: left;
+  margin-left: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h2 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: right;
+  margin-right: 5px;
+  margin-top: -75px;
+}
+
+h3 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: left;
+  margin-top: 100px;
+  margin-left: 10px;
+}
+
+.current-date-time {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+h4 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: left;
+  color: white;
+  margin-left: 10px;
+  margin-bottom: -10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h5 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: small;
+  color: white;
+  text-align: left;
+  margin-left: 5px;
 }
+
+.textbox {
+  border-radius: 10px;
+}
+
+
+
+.button:hover {
+  background-color: cadetblue;
+}
+
+.select-wrapper select {
+  border-radius: 10px;
+}
+
+input::placeholder {
+  color: gray;
+  font-style: italic;
+}
+
