--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,113 @@
-.App {
+body, html {
   margin: 0;
   padding: 0;
   height: 100%;
-  text-align: center;
-  background-color: rgb(0, 3, 46);
+  background-image: linear-gradient(80deg, rgb(5, 124, 172), rgb(199, 10, 114));
 }
 
-
-body {
-  background-color: rgb(33, 46, 46);
+.App {
+  position: relative;
+  z-index: 999; /* Ensure UI elements are on top */
+  padding: 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.5); /* Slightly transparent background */
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.AppTop {
+  padding: 10px;
+  margin: 10px;
+  border: 2px double white;
+  z-index: 999; /* Ensure UI elements are on top */
+}
+
+#up {
+  position: fixed;
+  height: 800px;
+  width: 800px;
+  border-radius: 50%;
+  background-image: linear-gradient(80deg, rgb(5, 124, 172), rgb(43, 247, 202, 0.5));
+  filter: blur(80px);
+  z-index: -1; /* Ensure background elements are on bottom */
+  animation: down 40s infinite;
+}
+
+#down {
+  position: fixed;
+  right: 0;
+  height: 500px;
+  width: 500px;
+  border-radius: 50%;
+  background-image: linear-gradient(80deg, rgba(245, 207, 82, 0.8), rgba(199, 10, 114));
+  filter: blur(80px);
+  z-index: -1; /* Ensure background elements are on bottom */
+  animation: up 30s infinite;
+}
+
+#left {
+  position: fixed;
+  height: 500px;
+  width: 500px;
+  border-radius: 50%;
+  background-image: linear-gradient(80deg, rgb(5, 124, 172), rgba(183, 253, 52, 0.8));
+  filter: blur(80px);
+  z-index: -1; /* Ensure background elements are on bottom */
+  animation: left 30s 1s infinite;
+}
+
+#right {
+  position: fixed;
+  height: 500px;
+  width: 500px;
+  border-radius: 50%;
+  background-image: linear-gradient(80deg, rgba(26, 248, 18, 0.6), rgba(183, 253, 52, 0.8));
+  filter: blur(80px);
+  z-index: -1; /* Ensure background elements are on bottom */
+  animation: right 40s .5s infinite;
+}
+
+@keyframes down{
+  0%, 100%{
+    top: -100px;
+  }
+  70%{
+   top: 700px; 
+  }
+}
+
+@keyframes up{
+  0%, 100%{
+    bottom: -100px;
+  }
+  70%{
+    bottom: 700px; 
+  }
+} 
+
+@keyframes left{
+  0%, 100%{
+    left: -100px;
+  }
+  70%{
+   left: 1300px; 
+  }
+}
+
+@keyframes right{
+  0%, 100%{
+    right: -100px;
+  }
+  70%{
+    right: 700px; 
+  }
+} 
+/*Main background elements and borders ^^^^ */
+
+
+
+/*Individual element positioning and visuals vvvv */
 h1 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: xx-large;
@@ -50,17 +147,24 @@ h5 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: small;
   color: white;
-  text-align: left;
+  text-align: center;
   margin-left: 5px;
+}
+
+.Timer{
+  display: grid; 
+  place-items: center;
 }
 
 .textbox {
   border-radius: 10px;
 }
 
+button {
+  border-radius: 10px;
+}
 
-
-.button:hover {
+button:hover {
   background-color: cadetblue;
 }
 
